@startuml

title __IMPL's Class Diagram__\n

  package  {
    package sale {
      package sale.impl {
        class Order {
            - transactionRef : String
            - productCode : String
            - payment : Integer
            + getTransactionRef()
            + setTransactionRef()
            + getProductCode()
            + setProductCode()
            + getPayment()
            + setPayment()
            + getCurrentState()
            + setCurrentState()
        }
      }
    }
  }
  

  package  {
    package sale {
      package sale.impl {
        enum OrderState {
          PREPROCESSING
          PROCESSING
          CANCELLED
          COMPLETED
        }
      }
    }
  }
  

  package  {
    package sale {
      package sale.impl {
        class VendingMachineImpl {
            {static} ~ LOG : Logger
            + listAvailableProducts()
            + addCoin()
            + getOrder()
            + addBill()
            + cancel()
            + dispenseProduct()
            ~ dispenseCash()
            + selectProduct()
            ~ display()
        }
      }
    }
  }
  

  Order o-- OrderState : currentState
  Order +-down- OrderState
  VendingMachineImpl -up-|> VendingMchine
  VendingMachineImpl o-- Order : order
  VendingMachineImpl o-- ProductManagerImpl : productManager
  VendingMachineImpl o-- MoneyManagerImpl : moneyManager


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
